Fix: align landing intro and info to same vertical position

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -84,10 +84,7 @@
 }
 
 .landing-image img {
-  width: 100%;
-  height: auto;
-  max-height: 100%;
-  object-fit: contain;
+  height: 100%;
   z-index: 2;
   position: relative;
 }
@@ -175,7 +172,7 @@
   position: absolute;
   z-index: 9;
   top: 12%;
-  left: 40px;
+  left: 0;
 }
 
 .landing-intro h2 {
@@ -218,6 +215,8 @@
 
 .landing-info h2 {
   margin: 0;
+  margin-top: -20px;
+  margin-left: 20px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   font-size: 32px;
@@ -237,12 +236,12 @@
 h2.landing-info-h2 {
   color: #14b8a6;
   font-size: 42px;
-  width: auto;
-  max-width: 100%;
+  width: 120%;
   margin: 0;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   position: relative;
+  margin-left: -5px;
 }
 
 .landing-h2-2 {
@@ -338,38 +337,38 @@ h2.landing-info-h2 {
 
   .landing-intro {
     top: 50%;
-    left: 40px;
-    right: auto;
+    left: auto;
+    right: 66%;
     transform: translate(0%, -50%);
   }
 
   .landing-info {
     bottom: auto;
-    top: 50%;
+    top: 51%;
     z-index: inherit;
     text-align: left;
     transform: translate(0%, -50%);
-    right: 40px;
-    left: auto;
+    right: auto;
+    left: 66%;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .landing-intro {
     top: 50%;
-    left: 40px;
-    right: auto;
+    left: auto;
+    right: 70%;
     transform: translate(0%, -50%);
   }
 
   .landing-info {
     bottom: auto;
-    top: 50%;
+    top: 51%;
     z-index: inherit;
     text-align: left;
     transform: translate(0%, -50%);
-    right: 40px;
-    left: auto;
+    right: auto;
+    left: 70%;
   }
 }
 
